# vision6D

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pts2d.npy  pts3d_latlon.npy  pyproject.toml  qt.py  run.py  run_gui.py  setup.cfg  setup.py  test.py  test1.py  trashcan.py
.github/workflows/: bundle.yml  deploy.yml  docs.yml
data/: 5997_left_ossicles.mesh  5997_right_chorda.mesh  5997_right_gt_pose.npy  5997_right_ossicles.mesh  6088_right_gt_pose.npy  6088_right_ossicles.mesh  6108_right_gt_pose.npy  6108_right_output_mesh_from_df.mesh  6742_gt_pose.npy  6742_left_chorda.mesh  6742_left_facial_nerve.mesh  6742_left_gt_pose.npy  6742_left_ossicles.mesh  6742_right_chorda.mesh  6742_right_facial_nerve.mesh  6742_right_gt_pose.npy  6742_right_nerve.mesh  6742_right_ossicles.mesh  6742_right_ossicles2.mesh  ossiclesCoordinateMapping.json
data/RL_20210304/: 5997_right_output_mesh_from_df.mesh
data/RL_20210422/: 6088_right_facial_nerve.mesh  6088_right_output_mesh_from_df.mesh  mask_6088_hand_draw_numpy.npy
data/RL_20210506/: 6108_right_facial_nerve.mesh  6108_right_ossicles.mesh
data/RL_20211028/: 6742_left_chorda.mesh  6742_left_output_mesh_from_df.mesh
data/gt_pose/: 455_right_gt_pose.npy  5997_right_gt_pose.npy  6088_right_gt_pose.npy  6108_right_gt_pose.npy
data/hand_draw_mask/: mask_5997_hand_draw_numpy.npy
data/original/: 6742_left_ossicles.mesh
data/original_meshes/: 6088_right_chorda.mesh  6108_right_chorda.mesh
differential_render/: __init__.py  camera_position_optimization.ipynb  config.json  eval.ipynb  eval_spie.ipynb  gan.py  optimizer_489.ipynb  optimizer_632.ipynb  optimizer_6602.ipynb  pnp.py  pnp_pytorch_lighting.py  result.ipynb
differential_render/dataset/: __init__.py  load_dataset.py
differential_render/loss/: __init__.py  crosscorr.py  gradient_loss.py  hist_loss.py  ssim_loss.py
differential_render/net/: resnet_uv.py  unet.py  unet_old.py
docs/: =1.0.1  docusaurus.config.js  docusaurus.config.ts  index.md  package-lock.json  package.json  postcss.config.js  sidebars.ts  tsconfig.json
docs/blog/: 2025-03-07-release.mdx  2025-04-07-release.mdx  authors.yml
docs/docs/: Card.tsx  download.md  getting-started.md  index.mdx  index.module.css  setup.md  user-guide.md
docs/source/: GUI.rst  conf.py  index.rst  interface.rst  manu.rst  panel.rst
output/hand_draw_mask/: mask_6108_hand_draw_numpy.npy  mask_6742_hand_draw_numpy.npy
scripts/: __main__.py
teaser/: draw_bbox.mkv  draw_mask.mkv  freehand_registration.mkv  mesh_render.mkv  set_pose.mkv  teaser.mkv
test/: test_app.py  test_create_dataset.py  test_load_image.py  test_mesh.py  test_pnp_with_telescope.py  test_pose_mathematics.py  test_projection.py  test_read_labels.py  test_utils.py
test/data/: 455_right_ossicles_processed.mesh  5997_right_facial_nerve.mesh  5997_right_output_mesh_from_df.mesh  chorda_001.ply  chorda_001_colored_not_centered.ply  chorda_001_not_centered.ply  cropped_mask_numpy.npy  cropped_segmented_mask_numpy.npy  facial_nerve_001.ply  facial_nerve_001_colored_not_centered.ply  facial_nerve_001_not_centered.ply  fragment.plyZone.Identifier  mask_1920.npy  mask_480_270.npy  mask_960.npy  mask_960_540.npy  ossicles_001_colored.ply  ossicles_001_colored_not_centered.ply  ossicles_001_not_colored.ply  pnp_results.txt  project-1-at-2022-11-26-09-48-2d5d27ff.json  pts3d_nocs.npy  quarter_image_mask_numpy.npy  smallest_image_mask_numpy.npy  standard_lens_mask_numpy.npy  test.ply  test1.npy
user_study/: sub_3acc67e2-95b2-40de-981b-a64ff768f0c5.xlsx  sub_6b320421-57d3-4e11-9641-20572111280c.xlsx  sub_932fd765-c414-4b48-a9ef-721e1cdfdff5.xlsx  sub_9ea916d7-e65d-4e32-8e77-a869d90431b0.xlsx  sub_c021e343-0f60-4fdf-87a3-5c122b910ac6.xlsx  sub_c16912b4-899b-4912-9283-aff49416c168.xlsx  sub_dda05c1f-6083-4df2-8f82-015a0db803cd.xlsx
vision6D/: GUI.py  __init__.py  __main__.py  app.py  app_window.py  config.py  interface.py  interface_gui.py  mainwindow.py  path.py  plotter_gui.py  realign.py  run_gui.py  temp.py  test.py  test_sample.py  utils.py  vision6D_app.py  widgets_gui.py
vision6D/components/: __init__.py  abstract_model.py  bbox_model.py  bbox_store.py  camera_store.py  folder_store.py  image_model.py  image_store.py  mask_model.py  mask_store.py  mesh_model.py  mesh_store.py  point_store.py  video_store.py  workspace_store.py
vision6D/containers/: __init__.py  bbox_container.py  camera_container.py  folder_container.py  image_container.py  mask_container.py  (+6 more)
visualization/: __init__.py  app.py  utils.py
workspace/: CIP.455.8381493978235_video_trim.json  CIP.455.8381493978235_video_trim_frame.json  CIP.455.8381493978235_video_trim_video.json  CIP.486.1381493978240_video_trim_frame.json  CIP.487.8381493978240_video_trim_frame.json  CIP.488.8381493978299_video_trim_frame.json  CIP.489.1281493978299_video_trim_frame.json  CIP.539.1929091231231_video_trim_frame.json  CIP.5997.8381493978443_video_trim_frame.json  CIP.5997.8381493978443_video_trim_video.json  CIP.6087.8415865242263_video_trim.json  CIP.6087.8415865242263_video_trim_frame.json  CIP.6087.8415865242263_video_trim_video.json  CIP.6088.1681356523312_video_trim_frame.json  CIP.6088.1681356523312_video_trim_video.json  CIP.6108.1638408845868_video_trim_frame.json  CIP.6108.1638408845868_video_trim_video.json  CIP.632.8381493978443_video_trim.json  CIP.632.8381493978443_video_trim_frame.json  CIP.632.8381493978443_video_trim_video.json  CIP.6320.5959167268122_video_trim_frame.json  CIP.6320.5959167268122_video_trim_video.json  CIP.6329.6010707468438_vieo_trim_frame.json  CIP.6329.6010707468438_vieo_trim_video.json  CIP.6602.7866163404219_video_trim_frame.json  CIP.6602.7866163404219_video_trim_video.json  CIP.6742.8381574350255_video_trim.json  CIP.6742.8381574350255_video_trim_frame.json  CIP.6742.8381574350255_video_trim_video.json  CIP.6751.1844636424484_video_trim_frame.json  CIP.6751.1844636424484_video_trim_video.json  a.json  b.json  camera.json  groud_truth.txt  lmo_scene_gt.json  obj_000001.json  obj_000001.ply  obj_000002.json  obj_000003.ply  (+13 more)
(+185 files in other folders)
