[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# Logging + CLI
# Reference: https://stackoverflow.com/questions/4673373/logging-within-pytest-tests
[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s.%(msecs)03d [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry]
homepage = 'https://github.com/ykzzyk/vision6D'