# More information for packaging and distributing project can be found
# here: https://packaging.python.org/tutorials/packaging-projects/
# Upload to pypy
# python setup.py sdist bdist_wheel
# twine upload dist/*
[metadata]
name = vision6D
version = 0.1.1  
url = https://github.com/ykzzky/vision6D
description = vision6D: A tool for 6D pose estimation annotation
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GENERAL Public License
platform = any
keywords = multimodal, data, analysis, real-time, distributed
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/ykzzky/vision6D/issues
    #Changelog = https://github.com/ykzzky/vision6D/blob/master/CHANGELOG.md

[options]
# Make sure to use find: to include subpackages!
packages = find:
include_package_data = true
python_requires = >= 3.6
test_suite = tests
setup_requires =
    setuptools
install_requires =
    pyvista
    numpy
    matplotlib
    trimesh
    easydict
    pillow
    scipy
    pytest
    pytest-lazy-fixture
    pre-commit
    opencv-python-headless
    scikit-image
    chardet
    pygeodesic
    PyQt5
    pyvistaqt

# [options.extras_require]
# test =
#     pytest
#     pytest-lazy-fixture

[options.package_data]
* = *.png, *.jpg, *.qml

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
# Google conventions
ignore = D200, D203, D213, D406, D407

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
