# More information for packaging and distributing project can be found
# here: https://packaging.python.org/tutorials/packaging-projects/
# Upload to pypy
# python -m build --sdist
# twine upload dist/* # pumpkin_q
[metadata]
name = vision6D
version = 0.2.8  
url = https://github.com/ykzzky/vision6D
project_urls =
    Documentation = https://vision6d.readthedocs.io/en/latest/
description = vision6D: A tool for 6D pose estimation annotation
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GENERAL Public License
platform = any
keywords = 6D, pose estimation, registration, segmentation, tool
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/ykzzky/vision6D/issues
    #Changelog = https://github.com/ykzzky/vision6D/blob/master/CHANGELOG.md

[options]
# Make sure to use find: to include subpackages!
packages = find:
include_package_data = true
python_requires = >= 3.6
test_suite = tests
setup_requires =
    setuptools
install_requires =
    pyvista>=0.39.1
    numpy>=1.23.5
    matplotlib>=3.5.2
    trimesh>=3.14.0
    easydict>=1.9
    pillow>=9.2.0
    scipy>=1.8.1
    pytest>=7.2.0
    pytest-lazy-fixture>=0.6.3
    pre-commit>=2.21.0
    opencv-python-headless>=4.7.0.68
    scikit-image>=0.19.3
    chardet>=5.1.0
    pygeodesic>=0.1.8
    PyQt5>=5.15.9
    pyvistaqt>=0.10.0

# [options.extras_require]
# test =
#     pytest
#     pytest-lazy-fixture

[options.package_data]
* = *.png, *.jpg, *.qml

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
# Google conventions
ignore = D200, D203, D213, D406, D407

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true